<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ShowActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#50EBEBEB">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            android:text="@string/wechat_"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/icon_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_alignTop="@+id/find_button"
            android:layout_alignBottom="@+id/find_button"/>

        <ImageView
            android:id="@+id/find_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/find_button"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/icon_button"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/huiSe"/>



    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="SpeakableTextPresentCheck" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/huiSe"/>

    <LinearLayout
        android:id="@+id/Lin"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#50EBEBEB"
        android:padding="5dp">

        <!--首页-->
        <RelativeLayout
            android:id="@+id/message_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <ImageView
                android:id="@+id/message_Img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/message" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_Img"
                android:layout_centerHorizontal="true"
                android:text="消息"
                android:textColor="@color/TextColor"
                android:textSize="15sp" />

        </RelativeLayout>



        <!--通讯录-->
        <RelativeLayout
            android:id="@+id/address_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <ImageView
                android:id="@+id/Address_Img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/address" />

            <TextView
                android:id="@+id/Address_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Address_Img"
                android:layout_centerHorizontal="true"
                android:text="@string/Address_book"
                android:textColor="@color/TextColor"
                android:textSize="15sp" />

        </RelativeLayout>


        <!--发现-->
        <RelativeLayout
            android:id="@+id/discover_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <ImageView
                android:id="@+id/discover_Img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/find" />

            <TextView
                android:id="@+id/discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/discover_Img"
                android:layout_centerHorizontal="true"
                android:text="@string/discover"
                android:textColor="@color/TextColor"
                android:textSize="15sp" />

        </RelativeLayout>

        <!--我-->
        <RelativeLayout
            android:id="@+id/me_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp">

            <ImageView
                android:id="@+id/me_Img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/me" />

            <TextView
                android:id="@+id/me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/me_Img"
                android:layout_centerHorizontal="true"
                android:text="@string/me"
                android:textColor="@color/TextColor"
                android:textSize="15sp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>