<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgk"
    tools:context=".ForgetActivity"
    android:id="@+id/constraint1">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gonggao" />

            <TextView
                android:id="@+id/runText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:gravity="center"
                android:layout_margin="3dp"
                android:text="                      本软件仅供学习交流，如作他用所承受的法律责任一概与作者无关"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:marqueeRepeatLimit="-1"
                android:focusable="false"
                android:focusableInTouchMode="true"/>


        </LinearLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="欢迎"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:src="@drawable/user"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyz"
                android:ems="10"
                android:hint="user"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/MyEditText"
                tools:ignore="TextFields" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:src="@drawable/password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyz.!"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="password"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:theme="@style/MyEditText" />

        </LinearLayout>


        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:allowClickWhenDisabled="true"
            android:background="@drawable/button_style"
            android:enabled="true"
            android:text="登录"
            android:textSize="15sp"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ForgetPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgetPass"
                android:textSize="15sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/NewUserAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/NewUserAdd"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textDirection="rtl" />
            <!--textDirection设置文字方向-->
        </LinearLayout>

        <CheckBox
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:text="@string/agreement" />

        <Button
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:text="开发者" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>